# LPCNet

./: .gitignore  CMakeLists.txt  Ch_f2.pcm  Ch_f2_dec.pcm  README.md  cmd.txt
src/: nnet_data.h
